add customizable text scale

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -61,7 +61,8 @@
     "clearCache": "Clear cache",
     "autoDelete": "Auto delete items",
     "sync": "Sync",
-    "onStart": "On start",
+    "syncOnStart": "Sync on start",
+    "inAppBrowser": "In-app browser",
     "lastSyncSuccess": "Last sync successful at",
     "lastSyncFailure": "Last sync failed at",
     "welcome": "Welcome",
