--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -61,7 +61,8 @@
     "clearCache": "清理缓存",
     "autoDelete": "自动删除文章",
     "sync": "同步",
-    "onStart": "打开应用时",
+    "syncOnStart": "打开应用时同步",
+    "inAppBrowser": "应用内浏览器",
     "lastSyncSuccess": "最后一次同步成功于",
     "lastSyncFailure": "最后一次同步失败于",
     "welcome": "欢迎",
