--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -78,5 +78,6 @@
     "logOut": "Log out",
     "logOutWarning": "All local data will be deleted. Are you sure?",
     "confirm": "Confirm",
-    "allLoaded": "All loaded"
+    "allLoaded": "All loaded",
+    "removeAd": "Remove Ad"
   }
