--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -78,5 +78,6 @@
     "logOut": "登出",
     "logOutWarning": "这将移除所有本地数据，是否继续？",
     "confirm": "确定",
-    "allLoaded": "已全部加载"
+    "allLoaded": "已全部加载",
+    "removeAd": "移除广告"
   }
