add google reader api support

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -79,5 +79,6 @@
     "logOutWarning": "All local data will be deleted. Are you sure?",
     "confirm": "Confirm",
     "allLoaded": "All loaded",
-    "removeAd": "Remove Ad"
+    "removeAd": "Remove Ad",
+    "getApiKey": "Get API ID & Key"
   }
