--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -80,5 +80,6 @@
     "confirm": "确定",
     "allLoaded": "已全部加载",
     "removeAd": "移除广告",
-    "getApiKey": "获取 API ID & KEY"
+    "getApiKey": "获取 API ID & KEY",
+    "getApiKeyHint": "在 “偏好设置” > “开发者” 下"
   }
