--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -87,5 +87,6 @@
     "wentWrong": "发生错误",
     "retry": "重试",
     "copy": "复制",
-    "errorLog": "错误日志"
+    "errorLog": "错误日志",
+    "unreadSourceTip": "您可以长按此页面的标题来切换全部订阅源或仅未读订阅源。"
   }
