add service import through uri scheme

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -90,5 +90,6 @@
     "errorLog": "Error log",
     "unreadSourceTip": "You can long press on the title of this page to toggle between all and unread subscriptions.",
     "uncategorized": "Uncategorized",
-    "showUncategorized": "Show uncategorized"
+    "showUncategorized": "Show uncategorized",
+    "serviceExists": "A service already exists. Please log out before importing."
   }
