--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -90,5 +90,6 @@
     "errorLog": "错误日志",
     "unreadSourceTip": "您可以长按此页面的标题来切换全部订阅源或仅未读订阅源。",
     "uncategorized": "未分组",
-    "showUncategorized": "显示“未分组”"
+    "showUncategorized": "显示“未分组”",
+    "serviceExists": "已登录至一个服务，请在导入前登出。"
   }
