Update Ukrainian translation

--- a/lib/l10n/intl_ua.arb
+++ b/lib/l10n/intl_ua.arb
@@ -64,7 +64,7 @@
     "clearCache": "Очистити кеш",
     "autoDelete": "Автоматичне видалення елементів",
     "sync": "Синхронізувати",
-    "syncOnStart": "Синхронізація на старті",
+    "syncOnStart": "Синхронізувати на старті",
     "inAppBrowser": "Вбудований браузер",
     "lastSyncSuccess": "Остання успішна синхронізація о",
     "lastSyncFailure": "Остання неуспішна синхронізація о",
@@ -74,7 +74,7 @@
     "username": "Ім'я користувача",
     "password": "Пароль",
     "fetchLimit": "Ліміт запиту",
-    "enter": "Необхідний",
+    "enter": "Ввести",
     "entered": "Введено",
     "serviceFailure": "Не вдається підключитися до служби",
     "serviceFailureHint": "Перевірте налаштування служби або стан мережі.",
