--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -49,7 +49,7 @@
     "fontSize": "Lettergrootte",
     "edit": "Bewerken",
     "name": "Naam",
-    "icon": "Icoon",
+    "icon": "Pictogram",
     "openTarget": "Standaarddoel bij artikelen",
     "rssText": "Volledige RSS tekst",
     "loadWebpage": "Webpagina laden",
